// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HtmlRendererComponent should render html 1`] = `
<div
  id="root1"
  ng-version="5.2.4"
>
  <span>
    <p
      style="color: red;"
    >
      html
    </p>
  </span>
</div>
`;

exports[`HtmlRendererComponent should render plain text 1`] = `
<div
  id="root0"
  ng-version="5.2.4"
>
  <span>
    plain text
  </span>
</div>
`;
